Enabled varying account features using plan capabilities

--- a/admin/templates/account.html.twig
+++ b/admin/templates/account.html.twig
@@ -170,11 +170,14 @@
 									{% if feature.enabled_for_account %}
 										checked="true"
 									{% endif %}
-									{% if not feature.enabled or feature.rolled_out_to_all %}
+									{% if not feature.enabled or feature.rolled_out_to_all or feature.enabled_for_plan %}
 										disabled="disabled"
 									{% endif %}
 									/>
 							{{ feature.name }}
+							{% if feature.enabled_for_plan %}
+								(enabled by <a href="plan.php?slug={{ plan_slug }}">subscription plan</a>)
+							{% endif %}
 						</label>
 					</div>
 				{% endfor %}
