--- a/admin/templates/account.html.twig
+++ b/admin/templates/account.html.twig
@@ -1,200 +1,214 @@
 <div class="span9">
-	{% if message %}
-		{% for msg in message %}
-			<h2>{{ msg }}</h2>
-		{% endfor %}
-	{% endif %}
-	{% if  not fatal %}
-		<h2>Account: {{ account_name }} <a href="edit_account.php?id={{ account_id }}" class="btn btn-mini"><i
-						class="icon-pencil"></i> edit</a></h2>
-		{% if account_isIndividual %}
-			<p>
-			<form action="{{ USERSROOTURL }}/admin/controller/account.php?id={{ account_id }}" method="POST">
-				<input type="hidden" name="CSRF_NONCE" value="{{ CSRF_NONCE }}"/>
-				Individual accout
-				{% if user %}
-					for <i class="icon-user"></i> <a
-						href="{{ USERSROOTURL }}/admin/user.php?id={{ user.id }}"{% if user.disabled %} style="color: silver; text-decoration: line-through"{% endif %}>{{ user.name }}</a>
-					<button class="btn btn-mini" name="remove_user" value="{{ user.id }}"><i class="icon-remove"></i>
-					</button>
-				{% else %}
-					<a class="btn btn-mini btn-danger"
-					   href="add_account_users.php?account_id={{ account_id }}&action=set_admin"><i
-								class="icon-plus icon-white"></i> <i class="icon-user icon-white"></i> Set Admin</a>
-				{% endif %}
-			</form>
-			</p>
-		{% endif %}
+{% if message %}
+	{% for msg in message %}
+		<h2>{{ msg }}</h2>
+	{% endfor %}
+{% endif %}
+{% if  not fatal %}
+	<h2>Account: {{ account_name }} <a href="edit_account.php?id={{ account_id }}" class="btn btn-mini"><i
+					class="icon-pencil"></i> edit</a></h2>
+	{% if account_isIndividual %}
 		<p>
-			Status: {% if account_isActive %}<b class="badge badge-success">Active</b>{% else %}<b
-					class="badge badge-important">Suspended</b>{% endif %}
-			Plan: <a class="badge badge-info" href="plan.php?slug={{ plan_slug }}"><i
-						class="icon-briefcase icon-white"></i> {{ plan_name }}</a>
+		<form action="{{ USERSROOTURL }}/admin/controller/account.php?id={{ account_id }}" method="POST">
+			<input type="hidden" name="CSRF_NONCE" value="{{ CSRF_NONCE }}"/>
+			Individual accout
+			{% if user %}
+				for <i class="icon-user"></i> <a
+					href="{{ USERSROOTURL }}/admin/user.php?id={{ user.id }}"{% if user.disabled %} style="color: silver; text-decoration: line-through"{% endif %}>{{ user.name }}</a>
+				<button class="btn btn-mini" name="remove_user" value="{{ user.id }}"><i class="icon-remove"></i>
+				</button>
+			{% else %}
+				<a class="btn btn-mini btn-danger"
+				   href="add_account_users.php?account_id={{ account_id }}&action=set_admin"><i
+							class="icon-plus icon-white"></i> <i class="icon-user icon-white"></i> Set Admin</a>
+			{% endif %}
+		</form>
+		</p>
+	{% endif %}
+	<p>
+		Status: {% if account_isActive %}<b class="badge badge-success">Active</b>{% else %}<b
+				class="badge badge-important">Suspended</b>{% endif %}
+		Plan: <a class="badge badge-info" href="plan.php?slug={{ plan_slug }}"><i
+					class="icon-briefcase icon-white"></i> {{ plan_name }}</a>
+	</p>
+
+	{% if useSubscriptions %}
+		<h3>Subscription</h3>
+		{% if plan_downgrade_to %}
+			<p>Plan automatically downgrades to: <a class="label"
+			                                        href="plan.php?slug={{ plan_downgrade_to_slug }}">{{ plan_downgrade_to }}</a>
+				if payment is due more than {{ plan_grace_period }} day(s)</p>
+		{% endif %}
+
+		<h4>Payment Schedule</h4>
+		{% if schedule_name %}
+			<p>Payment Schedule: <b>{{ schedule_name }}</b> ({{ schedule_description }})</p>
+			<p>Charge Amount: <b>${{ schedule_charge_amount }}</b></p>
+			<p>Charge Period: <b>{{ schedule_charge_period }}</b> days</p>
+		{% else %}
+			<i>Payment schedule is not defined</i>
+		{% endif %}
+
+		<h4>Payments</h4>
+		<p>Payment Engine used: <b>{{ account_engine }}</b>
+			<a class="btn btn-mini"
+			   href="{{ USERSROOTURL }}/admin/choose_engine.php?account_id={{ account_id }}">change</a>
 		</p>
 
-		{% if useSubscriptions %}
-			<h3>Subscription</h3>
-			{% if plan_downgrade_to %}
-				<p>Plan automatically downgrades to: <a class="label"
-				                                        href="plan.php?slug={{ plan_downgrade_to_slug }}">{{ plan_downgrade_to }}</a>
-					if payment is due more than {{ plan_grace_period }} day(s)</p>
-			{% endif %}
-
-			<h4>Payment Schedule</h4>
-			{% if schedule_name %}
-				<p>Payment Schedule: <b>{{ schedule_name }}</b> ({{ schedule_description }})</p>
-				<p>Charge Amount: <b>${{ schedule_charge_amount }}</b></p>
-				<p>Charge Period: <b>{{ schedule_charge_period }}</b> days</p>
-			{% else %}
-				<i>Payment schedule is not defined</i>
-			{% endif %}
-
-			<h4>Payments</h4>
-			<p>Payment Engine used: <b>{{ account_engine }}</b>
-				<a class="btn btn-mini" href="{{ USERSROOTURL }}/admin/choose_engine.php?account_id={{ account_id }}">change</a>
-			</p>
-
-			<div>
-				{% if balance < 0 %}
-					<p>Amount owed</p>
-					<ul>
-						{% set total = 0 %}
-						{% for c in charges %}
-							<li>{{ c.datetime }} ${{ c.amount }}</li>
-							{% set total = total + c.amount %}
-						{% endfor %}
-					</ul>
-					<p>Total debt: <b>${{ "%.2f"|format(total) }}</b></p>
-				{% else %}
-					<p>Balance: <b>${{ "%.2f"|format(balance) }}</b></p>
-				{% endif %}
-			</div>
-
-			{% if account_next_charge %}
-				<div>
-					<p>Next charge: <b>{{ account_next_charge }}</b></p>
-				</div>
-			{% endif %}
-			{% if next_plan_name and next_plan_name != plan_name %}
-				<div>
-					<p>After this date following plan used:</p>
-
-					<p>Plan Name: <b><a href="plan.php?slug={{ next_plan_slug }}">{{ next_plan_name }}</a></b></p>
-
-					<p>Plan Description: {{ next_plan_description }}</p>
-
-					<p>Plan Details: <a href="{{ plan_details_url }}">{{ next_plan_details_url }}</a></p>
-				</div>
-			{% endif %}
-			{% if next_schedule and next_plan_name == plan_name %}
-				<p>After this date following schedule used:</p>
-			{% endif %}
-			{% if next_schedule %}
-				<p>Payment Schedule: <b>{{ next_schedule_name }}</b></p>
-				<p>Payment Schedule description: {{ next_schedule_description }}</p>
-				<p>Charge Amount: <b>${{ next_schedule_charge_amount }}</b></p>
-				<p>Charge Period: <b>{{ next_schedule_charge_period }}</b> days</p>
-			{% endif %}
-
-			<div>
-				<i class="icon-list-alt"></i> <a
-						href="{{ USERSROOTURL }}/admin/transaction_log.php?account_id={{ account_id }}">View account
-					transaction log</a>
-			</div>
-		{% endif %}
-
-		{% if show_user_list %}
-			<h3>Account Users:</h3>
-			{% if account_isIndividual %}
-				{% if individual_no_admins %}
-					<p class="alert alert-error">Attention, individual account has no admin user set</p>
-				{% else %}
-					<p class="alert alert-error">Attention, multiple users are defined for an individual account</p>
-				{% endif %}
-			{% endif %}
-
-			<form action="{{ USERSROOTURL }}/admin/controller/account.php?id={{ account_id }}" method="POST">
-				<input type="hidden" name="CSRF_NONCE" value="{{ CSRF_NONCE }}"/>
-
-				<table class="table table-condensed">
-					{% for user in users %}
-						<tr>
-							<td>
-								<i class="icon-user"></i>
-								<a href="{{ USERSROOTURL }}/admin/user.php?id={{ user.id }}"{% if user.disabled %}
-									style="color: silver; text-decoration: line-through"{% endif %}>{{ user.name }}</a>
-							</td>
-							<td>
-								{% if user.admin %}
-									<span class="badge badge-important pull-right">admin</span>
-								{% else %}
-									<span class="badge pull-right">user</span>
-								{% endif %}
-							</td>
-							<td>
-								{% if user.admin %}
-									<button class="btn btn-mini btn-danger" name="demote_user" value="{{ user.id }}">
-										<i class="icon-chevron-down icon-white"></i> Demote
-									</button>
-								{% else %}
-									<button class="btn btn-mini" name="promote_user" value="{{ user.id }}">
-										<i class="icon-chevron-up"></i> Promote
-									</button>
-								{% endif %}
-							</td>
-							<td>
-								<button class="btn btn-mini pull-right" name="remove_user" value="{{ user.id }}"><i
-											class="icon-remove"></i></button>
-							</td>
-						</tr>
+		<div>
+			{% if balance < 0 %}
+				<p>Amount owed</p>
+				<ul>
+					{% set total = 0 %}
+					{% for c in charges %}
+						<li>{{ c.datetime }} ${{ c.amount }}</li>
+						{% set total = total + c.amount %}
 					{% endfor %}
-				</table>
-			</form>
+				</ul>
+				<p>Total debt: <b>${{ "%.2f"|format(total) }}</b></p>
+			{% else %}
+				<p>Balance: <b>${{ "%.2f"|format(balance) }}</b></p>
+			{% endif %}
+		</div>
 
-			{% if not account_isIndividual %}
-				<p><a class="btn btn-mini" href="add_account_users.php?account_id={{ account_id }}"><i
-								class="icon-plus"></i><i class="icon-user"></i> Add Users</a></p>
+		{% if account_next_charge %}
+			<div>
+				<p>Next charge: <b>{{ account_next_charge }}</b></p>
+			</div>
+		{% endif %}
+		{% if next_plan_name and next_plan_name != plan_name %}
+			<div>
+				<p>After this date following plan used:</p>
+
+				<p>Plan Name: <b><a href="plan.php?slug={{ next_plan_slug }}">{{ next_plan_name }}</a></b></p>
+
+				<p>Plan Description: {{ next_plan_description }}</p>
+
+				<p>Plan Details: <a href="{{ plan_details_url }}">{{ next_plan_details_url }}</a></p>
+			</div>
+		{% endif %}
+		{% if next_schedule and next_plan_name == plan_name %}
+			<p>After this date following schedule used:</p>
+		{% endif %}
+		{% if next_schedule %}
+			<p>Payment Schedule: <b>{{ next_schedule_name }}</b></p>
+			<p>Payment Schedule description: {{ next_schedule_description }}</p>
+			<p>Charge Amount: <b>${{ next_schedule_charge_amount }}</b></p>
+			<p>Charge Period: <b>{{ next_schedule_charge_period }}</b> days</p>
+		{% endif %}
+
+		<div>
+			<i class="icon-list-alt"></i> <a
+					href="{{ USERSROOTURL }}/admin/transaction_log.php?account_id={{ account_id }}">View account
+				transaction log</a>
+		</div>
+	{% endif %}
+
+	{% if show_user_list %}
+		<h3>Account Users:</h3>
+		{% if account_isIndividual %}
+			{% if individual_no_admins %}
+				<p class="alert alert-error">Attention, individual account has no admin user set</p>
+			{% else %}
+				<p class="alert alert-error">Attention, multiple users are defined for an individual account</p>
 			{% endif %}
 		{% endif %}
 
-		{% if features %}
-			<h3>Features</h3>
-			<form class="form" action="{{ USERSROOTURL }}/admin/controller/account.php?id={{ account_id }}"
-			      method="POST">
-				{% for feature in features %}
-					<div{% if not feature.enabled %} style="color: grey; text-decoration: line-through"{% endif %}>
-						<label class="checkbox">
-							<input id="feature_{{ feature.id }}"
-							       type="checkbox"
-							       name="feature[{{ feature.id }}]"
-									{% if feature.enabled_for_account %}
-										checked="true"
-									{% endif %}
-									{% if not feature.enabled or feature.rolled_out_to_all or feature.enabled_for_plan %}
-										disabled="disabled"
-									{% endif %}
-									/>
-							{{ feature.name }}
-							{% if feature.enabled and feature.rolled_out_to_all%}
-								(Rolled out to all users)
-							{% endif %}
-							{% if feature.enabled and not feature.rolled_out_to_all and feature.enabled_for_plan %}
-								(Enabled by <a href="plan.php?slug={{ plan_slug }}">subscription plan</a>)
-							{% endif %}
-						</label>
-					</div>
-				{% endfor %}
+		<form action="{{ USERSROOTURL }}/admin/controller/account.php?id={{ account_id }}" method="POST">
+			<input type="hidden" name="CSRF_NONCE" value="{{ CSRF_NONCE }}"/>
 
-				<input class="btn"
-				       type="submit"
-				       name="savefeatures"
-				       value="update features"
-						{% if not has_features_to_save %}
-							disabled="disabled"
-						{% endif %}
-						/>
-				<input type="hidden" name="CSRF_NONCE" value="{{ CSRF_NONCE }}"/>
-			</form>
+			<table class="table table-condensed">
+				{% for user in users %}
+					<tr>
+						<td>
+							<i class="icon-user"></i>
+							<a href="{{ USERSROOTURL }}/admin/user.php?id={{ user.id }}"{% if user.disabled %}
+								style="color: silver; text-decoration: line-through"{% endif %}>{{ user.name }}</a>
+						</td>
+						<td>
+							{% if user.admin %}
+								<span class="badge badge-important pull-right">admin</span>
+							{% else %}
+								<span class="badge pull-right">user</span>
+							{% endif %}
+						</td>
+						<td>
+							{% if user.admin %}
+								<button class="btn btn-mini btn-danger" name="demote_user" value="{{ user.id }}">
+									<i class="icon-chevron-down icon-white"></i> Demote
+								</button>
+							{% else %}
+								<button class="btn btn-mini" name="promote_user" value="{{ user.id }}">
+									<i class="icon-chevron-up"></i> Promote
+								</button>
+							{% endif %}
+						</td>
+						<td>
+							<button class="btn btn-mini pull-right" name="remove_user" value="{{ user.id }}"><i
+										class="icon-remove"></i></button>
+						</td>
+					</tr>
+				{% endfor %}
+			</table>
+		</form>
+
+		{% if not account_isIndividual %}
+			<p><a class="btn btn-mini" href="add_account_users.php?account_id={{ account_id }}"><i
+							class="icon-plus"></i><i class="icon-user"></i> Add Users</a></p>
 		{% endif %}
 	{% endif %}
+
+	{% if features %}
+		<h3>Features</h3>
+		<form class="form" action="{{ USERSROOTURL }}/admin/controller/account.php?id={{ account_id }}"
+		      method="POST">
+			{% for feature in features %}
+				<div
+						{% if feature.shut_down %}
+							style="color: red; text-decoration: line-through"
+							title="Feature is shut down due to emergency"
+						{% else %}
+							{% if not feature.enabled %}
+								style="color: grey; text-decoration: line-through"
+								title="Feature is disabled"
+							{% endif %}
+						{% endif %}
+						>
+					<label class="checkbox">
+						<input id="feature_{{ feature.id }}"
+						       type="checkbox"
+						       name="feature[{{ feature.id }}]"
+								{% if feature.is_checked %}
+									checked="true"
+								{% endif %}
+								{% if feature.disable_editing %}
+									disabled="disabled"
+								{% endif %}
+								/>
+						{% if feature.disable_editing and feature.enabled_for_account %}
+							<input type="hidden" name="feature[{{ feature.id }}]" value="true"/>
+						{% endif %}
+						{{ feature.name }}
+						{% if feature.enabled and feature.rolled_out_to_all %}
+							(Rolled out to all users)
+						{% endif %}
+						{% if feature.enabled and not feature.rolled_out_to_all and feature.enabled_for_plan %}
+							(Enabled by <a href="plan.php?slug={{ plan_slug }}">subscription plan</a>)
+						{% endif %}
+					</label>
+				</div>
+			{% endfor %}
+
+			<input class="btn"
+			       type="submit"
+			       name="savefeatures"
+			       value="update features"
+					{% if not has_features_to_save %}
+						disabled="disabled"
+					{% endif %}
+					/>
+			<input type="hidden" name="CSRF_NONCE" value="{{ CSRF_NONCE }}"/>
+		</form>
+	{% endif %}
+{% endif %}
 </div>
