Striking out username on activity report if user is disabled. Pre-pended startupapi to user-self class

--- a/templates/account/manage_account.html.twig
+++ b/templates/account/manage_account.html.twig
@@ -123,7 +123,7 @@
 						</td>
 
 						{%if user.self %}
-						<td colspan="2" class="user-self" title="You can't change your info, ask another admin to help you.">it's you</td>
+						<td colspan="2" class="startupapi-user-self" title="You can't change your info, ask another admin to help you.">it's you</td>
 						{%else%}
 							<td>
 								{%if user.admin %}
