Showing - in transaction log when amount on transaction is 0.

--- a/admin/templates/transaction_log.html.twig
+++ b/admin/templates/transaction_log.html.twig
@@ -76,7 +76,7 @@
 
 				{%for tr in log %}
 				<tr valign="top">
-					<td>{{ tr.date_time }}</td><td align="center">{%if tr.amount < 0 %}-{%endif%}${{ "%.2f"|format(tr.amount|abs)}}</td>
+					<td>{{ tr.date_time }}</td><td align="center">{%if tr.amount == 0 %}-{%else%}{%if tr.amount < 0 %}-{%endif%}${{ "%.2f"|format(tr.amount|abs)}}{%endif%}</td>
 					<td>{{ tr.message }}{{ tr.details|raw }}</td><td>{{ tr.engine_slug }}</td></tr>
 				{%endfor%}
 			</table>
