Removing manual selection of payment engine for user - it will only be done through plans management page

--- a/templates/account/subscription_details.html.twig
+++ b/templates/account/subscription_details.html.twig
@@ -75,9 +75,7 @@
 	{%endif%}
 	{%if payment_engine %}
 	<div>
-		<p>Payments processed by: <b>{{ payment_engine }}</b>
-			<a class="btn btn-mini" href="{{ USERSROOTURL }}/choose_engine.php" >Change</a>
-		</p>
+		<p>Payments processed by: <b>{{ payment_engine }}</b></p>
 	</div>
 	{%endif%}
 	<div>
