--- a/templates/account/subscription_details.html.twig
+++ b/templates/account/subscription_details.html.twig
@@ -11,7 +11,6 @@
 	<div>
 		<h2>{{ account_name }}</h2>
 		<p>Account Status: <b>{%if account_isActive %}Active{%else%}Suspended{%endif%}</b></p>
-		<p>Payment Engine used: <b>{{ account_engine }}</b></p>
 	</div>
 
 	<div>
@@ -19,8 +18,8 @@
 		<p>Name: <b>{{ plan_name }}</b> <a class="btn btn-mini" href="{{ USERSROOTURL }}/plans.php">Change</a></p>
 		<p>Description: {{ plan_description }}</p>
 		<p>Details: <a href="{{ plan_details_url }}">{{ plan_details_url }}</a></p>
-		{%if plan_downgrade_to %}
-			<p>Plan automatically downgrades to: <b>{{ plan_downgrade_to }}</b>
+		{%if plan_downgrade_to_name %}
+			<p>Plan automatically downgrades to: <b>{{ plan_downgrade_to_name }}</b>
 				if payment is due more than {{ plan_grace_period }} day(s)</p>
 		{%endif%}
 		{%if schedule_name %}
